--- a/src/css/index.less
+++ b/src/css/index.less
@@ -29,7 +29,9 @@
 }
 
 &.wrapper-full-height {
-     height: 100vh;
+    @media @desktop, @tablet-landscape {
+        height: 100vh;
+    }
  }
 }
 
