--- a/src/css/common.less
+++ b/src/css/common.less
@@ -65,3 +65,9 @@ a {
 .monospace {
   font-family: monospace, serif;
 }
+
+#wrapper + div {
+  display: none !important;
+  visibility: hidden;
+  pointer-events: none;
+}
